--- a/src/design-system/docs/styles/globals.css
+++ b/src/design-system/docs/styles/globals.css
@@ -86,6 +86,11 @@ button {
   cursor: pointer;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
