--- a/src/design-system/docs/styles/globals.css
+++ b/src/design-system/docs/styles/globals.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400&display=swap');
+
 @font-face {
   font-family: 'SFRounded';
-  src: url('/fonts/subset-SFRounded-Regular.eot');
-  src: url('/fonts/subset-SFRounded-Regular.eot?#iefix')
+  src: url('../public/fonts/subset-SFRounded-Regular.eot');
+  src: url('../public/fonts/subset-SFRounded-Regular.eot?#iefix')
       format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Regular.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Regular.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Regular.svg#SFRounded-Regular') format('svg');
+    url('../public/fonts/subset-SFRounded-Regular.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Regular.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Regular.svg#SFRounded-Regular') format('svg');
   font-weight: 400;
   font-style: normal;
   font-display: auto;
@@ -13,12 +15,12 @@
 
 @font-face {
   font-family: 'SFRounded';
-  src: url('/fonts/subset-SFRounded-Medium.eot');
-  src: url('/fonts/subset-SFRounded-Medium.eot?#iefix')
+  src: url('../public/fonts/subset-SFRounded-Medium.eot');
+  src: url('../public/fonts/subset-SFRounded-Medium.eot?#iefix')
       format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Medium.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Medium.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Medium.svg#SFRounded-Medium') format('svg');
+    url('../public/fonts/subset-SFRounded-Medium.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Medium.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Medium.svg#SFRounded-Medium') format('svg');
   font-weight: 500;
   font-style: normal;
   font-display: auto;
@@ -26,12 +28,12 @@
 
 @font-face {
   font-family: 'SFRounded';
-  src: url('/fonts/subset-SFRounded-Semibold.eot');
-  src: url('/fonts/subset-SFRounded-Semibold.eot?#iefix')
+  src: url('../public/fonts/subset-SFRounded-Semibold.eot');
+  src: url('../public/fonts/subset-SFRounded-Semibold.eot?#iefix')
       format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Semibold.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Semibold.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Semibold.svg#SFRounded-Semibold') format('svg');
+    url('../public/fonts/subset-SFRounded-Semibold.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Semibold.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Semibold.svg#SFRounded-Semibold') format('svg');
   font-weight: 600;
   font-style: normal;
   font-display: auto;
@@ -39,12 +41,12 @@
 
 @font-face {
   font-family: 'SFRounded';
-  src: url('/fonts/subset-SFRounded-Bold.eot');
-  src: url('/fonts/subset-SFRounded-Bold.eot?#iefix')
+  src: url('../public/fonts/subset-SFRounded-Bold.eot');
+  src: url('../public/fonts/subset-SFRounded-Bold.eot?#iefix')
       format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Bold.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Bold.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Bold.svg#SFRounded-Bold') format('svg');
+    url('../public/fonts/subset-SFRounded-Bold.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Bold.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Bold.svg#SFRounded-Bold') format('svg');
   font-weight: 700;
   font-style: normal;
   font-display: auto;
@@ -52,13 +54,78 @@
 
 @font-face {
   font-family: 'SFRounded';
-  src: url('/fonts/subset-SFRounded-Heavy.eot');
-  src: url('/fonts/subset-SFRounded-Heavy.eot?#iefix')
+  src: url('../public/fonts/subset-SFRounded-Heavy.eot');
+  src: url('../public/fonts/subset-SFRounded-Heavy.eot?#iefix')
       format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Heavy.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Heavy.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Heavy.svg#SFRounded-Heavy') format('svg');
+    url('../public/fonts/subset-SFRounded-Heavy.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Heavy.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Heavy.svg#SFRounded-Heavy') format('svg');
   font-weight: 800;
+  font-style: normal;
+  font-display: auto;
+}
+
+@font-face {
+  font-family: 'SF-Pro-Rounded-Regular';
+  src: url('../public/fonts/subset-SFRounded-Regular.eot');
+  src: url('../public/fonts/subset-SFRounded-Regular.eot?#iefix')
+      format('embedded-opentype'),
+    url('../public/fonts/subset-SFRounded-Regular.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Regular.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Regular.svg#SFRounded-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: auto;
+}
+
+@font-face {
+  font-family: 'SF-Pro-Rounded-Bold';
+  src: url('../public/fonts/subset-SFRounded-Bold.eot');
+  src: url('../public/fonts/subset-SFRounded-Bold.eot?#iefix')
+      format('embedded-opentype'),
+    url('../public/fonts/subset-SFRounded-Bold.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Bold.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Bold.svg#SFRounded-Bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: auto;
+}
+
+@font-face {
+  font-family: 'SF-Pro-Rounded-Medium';
+  src: url('../public/fonts/subset-SFRounded-Medium.eot');
+  src: url('../public/fonts/subset-SFRounded-Medium.eot?#iefix')
+      format('embedded-opentype'),
+    url('../public/fonts/subset-SFRounded-Medium.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Medium.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Medium.svg#SFRounded-Medium') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: auto;
+}
+
+@font-face {
+  font-family: 'SF-Pro-Rounded-Semibold';
+  src: url('../public/fonts/subset-SFRounded-Semibold.eot');
+  src: url('../public/fonts/subset-SFRounded-Semibold.eot?#iefix')
+      format('embedded-opentype'),
+    url('../public/fonts/subset-SFRounded-Semibold.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Semibold.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Semibold.svg#SFRounded-Semibold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: auto;
+}
+
+@font-face {
+  font-family: 'SF-Pro-Rounded-Heavy';
+  src: url('../public/fonts/subset-SFRounded-Heavy.eot');
+  src: url('../public/fonts/subset-SFRounded-Heavy.eot?#iefix')
+      format('embedded-opentype'),
+    url('../public/fonts/subset-SFRounded-Heavy.woff2') format('woff2'),
+    url('../public/fonts/subset-SFRounded-Heavy.woff') format('woff'),
+    url('../public/fonts/subset-SFRounded-Heavy.svg#SFRounded-Heavy') format('svg');
+  font-weight: normal;
   font-style: normal;
   font-display: auto;
 }
@@ -91,76 +158,11 @@ a {
   color: inherit;
 }
 
+code {
+  font-family: 'Fira Mono', monospace;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
-}
-
-/*
- * React Native typography
- */
-
-@font-face {
-  font-family: 'SF-Pro-Rounded-Regular';
-  src: url('/fonts/subset-SFRounded-Regular.eot');
-  src: url('/fonts/subset-SFRounded-Regular.eot?#iefix')
-      format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Regular.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Regular.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Regular.svg#SFRounded-Regular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: auto;
-}
-
-@font-face {
-  font-family: 'SF-Pro-Rounded-Bold';
-  src: url('/fonts/subset-SFRounded-Bold.eot');
-  src: url('/fonts/subset-SFRounded-Bold.eot?#iefix')
-      format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Bold.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Bold.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Bold.svg#SFRounded-Bold') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: auto;
-}
-
-@font-face {
-  font-family: 'SF-Pro-Rounded-Medium';
-  src: url('/fonts/subset-SFRounded-Medium.eot');
-  src: url('/fonts/subset-SFRounded-Medium.eot?#iefix')
-      format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Medium.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Medium.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Medium.svg#SFRounded-Medium') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: auto;
-}
-
-@font-face {
-  font-family: 'SF-Pro-Rounded-Semibold';
-  src: url('/fonts/subset-SFRounded-Semibold.eot');
-  src: url('/fonts/subset-SFRounded-Semibold.eot?#iefix')
-      format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Semibold.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Semibold.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Semibold.svg#SFRounded-Semibold') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: auto;
-}
-
-@font-face {
-  font-family: 'SF-Pro-Rounded-Heavy';
-  src: url('/fonts/subset-SFRounded-Heavy.eot');
-  src: url('/fonts/subset-SFRounded-Heavy.eot?#iefix')
-      format('embedded-opentype'),
-    url('/fonts/subset-SFRounded-Heavy.woff2') format('woff2'),
-    url('/fonts/subset-SFRounded-Heavy.woff') format('woff'),
-    url('/fonts/subset-SFRounded-Heavy.svg#SFRounded-Heavy') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: auto;
 }
